--- a/css/main.css
+++ b/css/main.css
@@ -131,6 +131,10 @@ h1, .h01, h2, .h02, h3, .h03, h4, .h04 {
     margin-bottom: 1.8rem;
 }
 
+.basicinfo{
+    color: black;
+}
+
 @media only screen and (max-width: 600px) {
     h1, .h01, h2, .h02, h3, .h03, h4, .h04 {
         margin-top: 5.1rem;
