--- a/css/vendor.css
+++ b/css/vendor.css
@@ -1,7 +1,7 @@
-/* =================================================================== 
+/* ===================================================================
  *
- *  Hola v1.0 Vendor/Third Party CSS 
- *  10-02-2017
+ *  Jeremy Chan Portfolio v1.0 Vendor/Third Party CSS
+ *  30-10-2019
  *  ------------------------------------------------------------------
  *
  *  TOC:
@@ -400,9 +400,9 @@
 }
 
 
-/* 
-pswp__ui--over-close class it added when mouse is 
-over element that should close gallery 
+/*
+pswp__ui--over-close class it added when mouse is
+over element that should close gallery
 */
 
 .pswp__ui--over-close .pswp__button--close {
@@ -764,8 +764,8 @@ a.pswp__share--download:hover {
 }
 
 .pswp--css_animation .pswp__preloader__cut {
-    /* 
-			The idea of animating inner circle is based on Polymer ("material") loading indicator 
+    /*
+			The idea of animating inner circle is based on Polymer ("material") loading indicator
 			 by Keanu Lee https://blog.keanulee.com/2014/10/20/the-tale-of-three-spinners.html
 		*/
     position: relative;
