cleaned masonry js code

--- a/css/main.css
+++ b/css/main.css
@@ -2623,7 +2623,10 @@ html.no-csstransitions .home-content__main {
 
 @media only screen and (max-width: 600px) {
     .masonry .grid-sizer, .masonry__brick {
-        width: 100%;
+        width: 100% !important;
+        position: relative !important;
+        top:0 !important;
+        clear:both;
     }
 }
 
