changed from learning-git to application-dev and changed home link to https://jeremychan.co

--- a/css/main.css
+++ b/css/main.css
@@ -111,6 +111,10 @@ a:focus {
     outline: none;
 }
 
+.link {
+    color: #0004ff;
+}
+
 
 
 /* ===================================================================
