--- a/css/main.css
+++ b/css/main.css
@@ -3790,7 +3790,7 @@ article.blog-single .blog-content {
 }
 
 .blog-content__main img {
-    max-width: 1000px;
+    /* max-width: 1000px; */
     /* margin: 3rem 0 3rem -6rem; */
 }
 
@@ -3962,7 +3962,7 @@ article.blog-single .blog-content {
         padding-right: 5rem;
     }
     .blog-content__main img {
-        max-width: 900px;
+        /* max-width: 900px; */
         /* margin: 3rem 0 3rem -5rem; */
         margin: 1.5rem 3rem 0 0;
     }
@@ -3977,7 +3977,7 @@ article.blog-single .blog-content {
         padding-right: 4rem;
     }
     .blog-content__main img {
-        max-width: 800px;
+        /* max-width: 800px; */
         margin: 3rem 0 3rem -4rem;
     }
     .blog-content__prev, .blog-content__next {
