--- a/css/main.css
+++ b/css/main.css
@@ -2658,12 +2658,13 @@ html.no-csstransitions .home-content__main {
 
 .s-testimonials {
     background-color: #0D0A0B;
-    background-image: url("../images/testimonial-bg.jpg");
+    background-image: url("../images/references.jpg");
+    background-size: cover;
     background-repeat: no-repeat;
     background-position: center, center;
     padding-top: 9.6rem;
     padding-bottom: 10.2rem;
-    color: rgba(255, 255, 255, 0.5);
+    color: rgba(255, 255, 255, 0.8);
     position: relative;
 }
 
@@ -2673,7 +2674,7 @@ html.no-csstransitions .home-content__main {
     left: 0;
     width: 100%;
     height: 100%;
-    opacity: .85;
+    opacity: .55;
     background-color: #0D0A0B;
 }
 
