--- a/css/main.css
+++ b/css/main.css
@@ -2658,7 +2658,7 @@ html.no-csstransitions .home-content__main {
 
 .s-testimonials {
     background-color: #0D0A0B;
-    background-image: url("../images/references.jpg");
+    background-image: url("https://images.pexels.com/photos/3753160/pexels-photo-3753160.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center, center;
